# autobfx

./: .gitignore  README.md  __init__.py  config.yaml  prefect.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deep_test.yaml  routine_test.yaml  routine_tests.yaml  test.yaml
cmd/: init  start  status  stop
deployments/: sample_collection.yaml
envs/: bwa.yaml  fastqc.yaml  trimmomatic.yaml
flows/: __init__.py  example.py  fastqc.py  qc.py  sample_collection.py  trimmomatic.py
flows/tasks/: fastqc.py  heyfastq.py  trimmomatic.py
src/autobfx/: __init__.py
src/autobfx/flows/: __init__.py  bwa.py  clean_shotgun.py  decontam.py  fastqc.py  heyfastq.py  logo.py  main.py  qc.py  samtools.py  trimmomatic.py
src/autobfx/lib/: config.py  daemon.py  flow.py  io.py  iterator.py  plugin.py  plugin_registry.py  project.py  runner.py  task.py  utils.py
src/autobfx/scripts/: __init__.py  ai.py  autobfx.py  init.py  run.py  server.py  worker.py
src/autobfx/tasks/: bwa.py  conda.py  fastqc.py  heyfastq.py  sample_collection.py  samtools.py  trimmomatic.py
tasks/: fastqc.py  heyfastq.py  trimmomatic.py
tests/: conftest.py
tests/data/: config.yaml
tests/data/example_project/: config.py
tests/e2e/: README.md  test_clean_shotgun.py  test_qc.py
tests/flows/: conftest.py
tests/lib/: test_config.py
tests/tasks/: test_fastqc.py
tests/unit/: test_fail.py  test_fastqc.py  test_heyfastq.py  test_trimmomatic.py
